new backend test2

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Comprovante de Recebimento</title>
+  <title>Comprovante de Pagamento</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="comprovante-container">
-    <h1>Comprovante de Recebimento</h1>
+    <h1>Comprovante de Pagamento</h1>
     <div class="informacoes">
       <p><span>Data:</span> <span id="data-atual"></span></p>
       <p><span>Valor Recebido:</span> R$ 1.000,00</p>
       <p><span>De:</span>Picanço Cyber</p>
-      <p><span>Status:</span> Recebido com Sucesso</p>
+      <p><span>Status:</span>Recebido com Sucesso</p>
     </div>
     <button class="botao" onclick="window.print()">Imprimir</button>
     <div class="comprovante-footer">
